mise à jour programme

--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -67,22 +67,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
+   "id": "abe0f72e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trouver_categorie_page(\"https://www.amazon.com/s?bbn=11552285011&rh=n%3A11552285011%2Cn%3A156699011&dc&qid=1662412432&rnid=11552285011&ref=lp_11552285011_nr_n_7\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "331dfbed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<li class=\"a-spacing-micro s-navigation-indent-2\" id=\"n/156700011\"><span class=\"a-list-item\">\n",
+      "<a class=\"a-link-normal s-navigation-item\" data-routing=\"off\" href=\"/s?i=digital-text&amp;bbn=11552285011&amp;rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156700011&amp;dc&amp;qid=1662584999&amp;rnid=156699011&amp;ref=sr_nr_n_1&amp;ds=v1%3AJacN2fkn4PInRcUxGCvnd7lvagT6vmq55p5Rb9aGTAw\">\n",
+      "<span class=\"a-size-base a-color-base\">Animal Care &amp; Pets</span>\n",
+      "</a>\n",
+      "</span></li>, <li class=\"a-spacing-micro s-navigation-indent-2\" id=\"n/156718011\"><span class=\"a-list-item\">\n",
+      "<a class=\"a-link-normal s-navigation-item\" data-routing=\"off\" href=\"/s?i=digital-text&amp;bbn=11552285011&amp;rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156718011&amp;dc&amp;qid=1662584999&amp;rnid=156699011&amp;ref=sr_nr_n_2&amp;ds=v1%3AeO4721bp%2FzY4Xvvt0LOS4S4oKZWoXuVYDRbUakMPgnY\">\n",
+      "<span class=\"a-size-base a-color-base\">Antiques &amp; Collectibles</span>\n",
+      "</a>\n",
+      "</span></li>, <li class=\"a-spacing-micro s-navigation-indent-2\" id=\"n/156765011\"><span class=\"a-list-item\">\n",
+      "<a class=\"a-link-normal s-navigation-item\" data-routing=\"off\" href=\"/s?i=digital-text&amp;bbn=11552285011&amp;rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156765011&amp;dc&amp;qid=1662584999&amp;rnid=156699011&amp;ref=sr_nr_n_3&amp;ds=v1%3AjanNKTrl4ygwA2UK84jX2zKiiBZD%2FdSv68xx7uJ5V7Q\">\n",
+      "<span class=\"a-size-base a-color-base\">Crafts &amp; Hobbies</span>\n",
+      "</a>\n",
+      "</span></li>, <li class=\"a-spacing-micro s-navigation-indent-2\" id=\"n/156828011\"><span class=\"a-list-item\">\n",
+      "<a class=\"a-link-normal s-navigation-item\" data-routing=\"off\" href=\"/s?i=digital-text&amp;bbn=11552285011&amp;rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156828011&amp;dc&amp;qid=1662584999&amp;rnid=156699011&amp;ref=sr_nr_n_4&amp;ds=v1%3AtnTB3e1v45W6jpVHCWecwLSajhdBFnpMWVvXiz7shr4\">\n",
+      "<span class=\"a-size-base a-color-base\">Gardening &amp; Horticulture</span>\n",
+      "</a>\n",
+      "</span></li>, <li class=\"a-spacing-micro s-navigation-indent-2\" id=\"n/156875011\"><span class=\"a-list-item\">\n",
+      "<a class=\"a-link-normal s-navigation-item\" data-routing=\"off\" href=\"/s?i=digital-text&amp;bbn=11552285011&amp;rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156875011&amp;dc&amp;qid=1662584999&amp;rnid=156699011&amp;ref=sr_nr_n_5&amp;ds=v1%3A60VHdfF%2FFgloHe47OvMMlbmqXhoHsA%2Fe8tP5Io%2BK8aA\">\n",
+      "<span class=\"a-size-base a-color-base\">Home Design</span>\n",
+      "</a>\n",
+      "</span></li>, <li class=\"a-spacing-micro s-navigation-indent-2\" id=\"n/156886011\"><span class=\"a-list-item\">\n",
+      "<a class=\"a-link-normal s-navigation-item\" data-routing=\"off\" href=\"/s?i=digital-text&amp;bbn=11552285011&amp;rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156886011&amp;dc&amp;qid=1662584999&amp;rnid=156699011&amp;ref=sr_nr_n_6&amp;ds=v1%3A1m28HCoCSHzEsCkWGiPIRuCvOlEHFysomKXsAwu4m40\">\n",
+      "<span class=\"a-size-base a-color-base\">How-to &amp; Home Improvements</span>\n",
+      "</a>\n",
+      "</span></li>, <li class=\"a-spacing-micro s-navigation-indent-2\" id=\"n/156903011\"><span class=\"a-list-item\">\n",
+      "<a class=\"a-link-normal s-navigation-item\" data-routing=\"off\" href=\"/s?i=digital-text&amp;bbn=11552285011&amp;rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156903011&amp;dc&amp;qid=1662584999&amp;rnid=156699011&amp;ref=sr_nr_n_7&amp;ds=v1%3AX%2F20EMwkPPFPxjpPC6dE2iEC67jldFgUEXHZ4jU70r0\">\n",
+      "<span class=\"a-size-base a-color-base\">Interior Design</span>\n",
+      "</a>\n",
+      "</span></li>]\n",
+      "{'Animal Care & Pets': 'https://www.amazon.com/s?i=digital-text&bbn=11552285011&rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156700011&dc&qid=1662584999&rnid=156699011&ref=sr_nr_n_1&ds=v1%3AJacN2fkn4PInRcUxGCvnd7lvagT6vmq55p5Rb9aGTAw', 'Antiques & Collectibles': 'https://www.amazon.com/s?i=digital-text&bbn=11552285011&rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156718011&dc&qid=1662584999&rnid=156699011&ref=sr_nr_n_2&ds=v1%3AeO4721bp%2FzY4Xvvt0LOS4S4oKZWoXuVYDRbUakMPgnY', 'Crafts & Hobbies': 'https://www.amazon.com/s?i=digital-text&bbn=11552285011&rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156765011&dc&qid=1662584999&rnid=156699011&ref=sr_nr_n_3&ds=v1%3AjanNKTrl4ygwA2UK84jX2zKiiBZD%2FdSv68xx7uJ5V7Q', 'Gardening & Horticulture': 'https://www.amazon.com/s?i=digital-text&bbn=11552285011&rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156828011&dc&qid=1662584999&rnid=156699011&ref=sr_nr_n_4&ds=v1%3AtnTB3e1v45W6jpVHCWecwLSajhdBFnpMWVvXiz7shr4', 'Home Design': 'https://www.amazon.com/s?i=digital-text&bbn=11552285011&rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156875011&dc&qid=1662584999&rnid=156699011&ref=sr_nr_n_5&ds=v1%3A60VHdfF%2FFgloHe47OvMMlbmqXhoHsA%2Fe8tP5Io%2BK8aA', 'How-to & Home Improvements': 'https://www.amazon.com/s?i=digital-text&bbn=11552285011&rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156886011&dc&qid=1662584999&rnid=156699011&ref=sr_nr_n_6&ds=v1%3A1m28HCoCSHzEsCkWGiPIRuCvOlEHFysomKXsAwu4m40', 'Interior Design': 'https://www.amazon.com/s?i=digital-text&bbn=11552285011&rh=n%3A11552285011%2Cn%3A156699011%2Cn%3A156903011&dc&qid=1662584999&rnid=156699011&ref=sr_nr_n_7&ds=v1%3AX%2F20EMwkPPFPxjpPC6dE2iEC67jldFgUEXHZ4jU70r0'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "browser.get(\"https://www.amazon.com/s?bbn=11552285011&rh=n%3A11552285011%2Cn%3A156699011&dc&qid=1662412432&rnid=11552285011&ref=lp_11552285011_nr_n_7\") #ouvre le navigateur\n",
+    "#browser.get(url) #rajouter la double activation s'il y a un problème parfois il faut lire 2 fois la page\n",
+    "html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser lxml\n",
+    "categories = soup.find_all('li'  , class_ = 'a-spacing-micro s-navigation-indent-2') \n",
+    "#trouve toutes les catégories avec la class li a spacing micro etc... ce qui correspond a \n",
+    "listing_categories={} #on créé un dictionnaire vide\n",
+    "print(categories)\n",
+    "for categorie in categories : # on va balayer toutes les catérgories trouvées sur cette page\n",
+    "    categor = categorie.span.text.strip() # via la fonction strip on récupère le nom de la catégories\n",
+    "    lien = 'https://www.amazon.com'+ categorie.a.get('href') # on recréé le lien\n",
+    "    listing_categories[categor] = lien # le dictionnaire est incrémenté\n",
+    "print(listing_categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "63e22751",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_dict['lettre']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "45739e9f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def trouver_categorie_page(url):\n",
-    "    browser.get(url)\n",
+    "    browser.get(url) #ouvre le navigateur\n",
     "    #browser.get(url) #rajouter la double activation s'il y a un problème parfois il faut lire 2 fois la page\n",
     "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
-    "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
-    "    categories = soup.find_all('li'  , class_ = 'a-spacing-micro apb-browse-refinements-indent-2')\n",
-    "    listing_categories={}\n",
-    "    for categorie in categories :\n",
-    "        categor = categorie.span.text.strip()\n",
-    "        lien = 'https://www.amazon.com'+ categorie.a.get('href')\n",
-    "        listing_categories[categor] = lien\n",
+    "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser lxml\n",
+    "    categories = soup.find_all('li'  , class_ = 'a-spacing-micro apb-browse-refinements-indent-2') \n",
+    "    # la classe a été changé ?? nouveau test 'a-spacing-micro s-navigation-indent-2' qui fonctionne.\n",
+    "    #trouve toutes les catégories avec la class li a spacing micro etc... ce qui correspond a \n",
+    "    listing_categories={} #on créé un dictionnaire vide\n",
+    "    for categorie in categories : # on va balayer toutes les catérgories trouvées sur cette page\n",
+    "        categor = categorie.span.text.strip() # via la fonction strip on récupère le nom de la catégories\n",
+    "        lien = 'https://www.amazon.com'+ categorie.a.get('href') # on recréé le lien\n",
+    "        listing_categories[categor] = lien # le dictionnaire est incrémenté\n",
     "    return(listing_categories)\n",
     "\n",
     "def trouver_et_archiver_categorie_page(url,dictionnaire):\n",
@@ -99,7 +202,7 @@
     "    return(dictionnaire_copie)\n",
     "\n",
     "def encrypter(url,titre,rang,prix):\n",
-    "    dictionnary = [{'url':url ,'titre':titre,  'rang':rang ,'prix':prix }]\n",
+    "    dictionnary = [{'url':url ,'titre':titre,  'rang':rang ,'prix':prix }] \n",
     "    print(dictionnary)\n",
     "    with open('results.csv','a') as f :                        # ouvre le fichier result.csv\n",
     "        fields=['titre','rang','prix','url']                  # permet de faire un    \n",
@@ -204,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "0bc90ebd",
    "metadata": {},
    "outputs": [
@@ -212,7 +315,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_793/2940111159.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_799/2940111159.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -264,7 +367,6 @@
    "cell_type": "markdown",
    "id": "7b8d00d9",
    "metadata": {
-    "heading_collapsed": true,
     "tags": []
    },
    "source": [
@@ -275,9 +377,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "d0807f82",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -347,9 +447,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "7c49eec7",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -376,9 +474,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "17a5c41d",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -399,9 +495,7 @@
    "cell_type": "code",
    "execution_count": 59,
    "id": "e37ba8e0",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "IndexError",
@@ -423,17 +517,13 @@
   {
    "cell_type": "markdown",
    "id": "07fa6918",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "c50236cb",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": []
   },
   {
@@ -6458,7 +6548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "ea86a371",
    "metadata": {
     "scrolled": true
@@ -6470,7 +6560,7 @@
        "'https://www.amazon.com/s?bbn=154692011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154692011%2Cn%3A154695011&dc&qid=1660772050&rnid=154692011&ref=lp_154692011_nr_n_2'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
