rajout d'un prog pour analyser la meilleure catégories

--- a/notebooks/NoteBook.ipynb
+++ b/notebooks/NoteBook.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "45739e9f",
    "metadata": {},
    "outputs": [],
@@ -303,71 +303,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "41cba34e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cat 1</th>\n",
-       "      <th>cat 2</th>\n",
-       "      <th>cat 3</th>\n",
-       "      <th>cat 4</th>\n",
-       "      <th>cat 5</th>\n",
-       "      <th>cat final</th>\n",
-       "      <th>url_categories</th>\n",
-       "      <th>titre</th>\n",
-       "      <th>rang</th>\n",
-       "      <th>prix</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  cat 1 cat 2 cat 3 cat 4 cat 5 cat final url_categories titre rang prix url\n",
-       "0                                                                           "
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'index_livres_scrappes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [8]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcreerdataframevide\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [7]\u001b[0m, in \u001b[0;36mcreerdataframevide\u001b[0;34m()\u001b[0m\n\u001b[1;32m    158\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreerdataframevide\u001b[39m():\n\u001b[0;32m--> 159\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(  [[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m]]  ,   columns \u001b[38;5;241m=\u001b[39m \u001b[43mindex_livres_scrappes\u001b[49m   )\n\u001b[1;32m    160\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'index_livres_scrappes' is not defined"
+     ]
     }
    ],
    "source": [
@@ -772,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "0bc90ebd",
    "metadata": {
     "scrolled": true
@@ -782,7 +732,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_812/1791393339.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_26205/1791393339.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -6778,7 +6728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "64a76a5f",
    "metadata": {},
    "outputs": [],
@@ -6788,7 +6738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "d705f6d6",
    "metadata": {},
    "outputs": [
@@ -7018,7 +6968,7 @@
        "[8747 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7073,7 +7023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "id": "6c29860e",
    "metadata": {
     "scrolled": true
@@ -7082,21 +7032,21 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.amazon.com/s?i=digital-text&rh=n%3A154695011&fs=true&page=1'"
+       "'Gothic'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe_FINALE['url_node'][160]"
+    "dataframe_FINALE['cat 2'][92]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "id": "af92d98a",
    "metadata": {},
    "outputs": [
@@ -7134,39 +7084,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>160</th>\n",
-       "      <td>Arts &amp; Photography</td>\n",
-       "      <td>Dance</td>\n",
-       "      <td>Classical</td>\n",
+       "      <th>92</th>\n",
+       "      <td>Romance</td>\n",
+       "      <td>Gothic</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>finale</td>\n",
-       "      <td>https://www.amazon.com/s?bbn=154692011&amp;rh=n%3A...</td>\n",
+       "      <td>https://www.amazon.com/s?bbn=158566011&amp;rh=n%3A...</td>\n",
        "      <td>https://www.amazon.com/s?i=digital-text&amp;rh=n%3...</td>\n",
-       "      <td>3A154695011</td>\n",
+       "      <td>3A6487830011</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  cat 1  cat 2      cat 3 cat 4  cat 5 cat final  \\\n",
-       "160  Arts & Photography  Dance  Classical     0      0    finale   \n",
+       "      cat 1   cat 2 cat 3 cat 4  cat 5 cat final  \\\n",
+       "92  Romance  Gothic     0     0      0    finale   \n",
        "\n",
-       "                                                   url  \\\n",
-       "160  https://www.amazon.com/s?bbn=154692011&rh=n%3A...   \n",
+       "                                                  url  \\\n",
+       "92  https://www.amazon.com/s?bbn=158566011&rh=n%3A...   \n",
        "\n",
-       "                                              url_node         node  \n",
-       "160  https://www.amazon.com/s?i=digital-text&rh=n%3...  3A154695011  "
+       "                                             url_node          node  \n",
+       "92  https://www.amazon.com/s?i=digital-text&rh=n%3...  3A6487830011  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe_FINALE.loc[[160]]"
+    "dataframe_FINALE.loc[[92]]"
    ]
   },
   {
@@ -12149,7 +12099,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "e9b3f7c0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -12255,6 +12207,144 @@
    "source": [
     "data.groupby(['url_categories'])['rang'].mean().to_frame()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38555909",
+   "metadata": {},
+   "source": [
+    "# scrap d'une catégorie totale"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60998667",
+   "metadata": {},
+   "source": [
+    "à l'analye la gatégorie Romance / Gothic est la mieux noté. Je vais la scrapper en entier, pour voir que contienne ces 200 pages et après faire une analyse de texte sur les titres par exemples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ecc0948f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_26205/993495513.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n",
+      "/tmp/ipykernel_26205/993495513.py:5: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.amazon.com/s?i=digital-text&rh=n%3A6487830011&fs=true&page=1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "/tmp/ipykernel_26205/271426069.py:75: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df = dframe.append(df1 , ignore_index=True )\n",
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "DRIVER_PATH_chromedriver = str(Path('../chromedriver').resolve())\n",
+    "browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n",
+    "i = 92 # la ligne 92 correspond à la catégories Gothic.\n",
+    "DRIVER_PATH_chromedriver = str(Path('../chromedriver').resolve())\n",
+    "browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n",
+    "lien_categories = dataframe_FINALE['url_node'][i]\n",
+    "#lien_categories = 'https://www.amazon.com/s?i=digital-text&rh=n%3A154656011&fs=true&page=1'\n",
+    "df = creerdataframevide()\n",
+    "p=0\n",
+    "while p < 300 : \n",
+    "#while livre_dans_page(lien_categories) == True: le boucle while est la bonne méthode pour faire les 250 pages\n",
+    "    browser.get( lien_categories) # on ouvre une page qui est la première d'une catégories normalement\n",
+    "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
+    "    livres = soup.find_all('div' ,{ 'data-asin':True, 'data-component-type' : 's-search-result'} ) \n",
+    "    # trouve tous les livres de la pages\n",
+    "    if livres!=[]: #si cette liste n'est pas vide \n",
+    "        for livre in livres:\n",
+    "            url_du_livre = 'https://www.amazon.com'+livre.h2.a.get('href')\n",
+    "            #encryper_depuis_url_page_livre(url_du_livre) \n",
+    "            df = encryper_depuis_url_page_livre_v2(i,url_du_livre,df) # ici on passe en argument le ligne i relatif à la ligne du dataframe, et le url du livre\n",
+    "    else: break\n",
+    "    print(lien_categories)\n",
+    "    lien_categories = incrementer_url(lien_categories)\n",
+    "    p=p+1\n",
+    "    #df.to_csv('resultats_livres.csv', mode='a', index=False, header=False)\n",
+    "    #df.to_csv('resultats_livres.csv', mode='a', index=index_livres_scrappes ) \n",
+    "    #df.to_csv('resultats_livres.csv', mode='a', index=index_livres_scrappes ) \n",
+    "    df.to_csv('resultats_gategories_romance_gotique.csv', mode='a', header=False )\n",
+    "    browser.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "560e13ff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
