--- a/notebooks/NoteBook-version2.ipynb
+++ b/notebooks/NoteBook-version2.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "5e7fdf71",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "d11bc091",
    "metadata": {
     "scrolled": false
@@ -79,7 +79,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_911/1396101126.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_837/1396101126.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "437a7b4b",
    "metadata": {
     "scrolled": true
@@ -106,16 +106,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Architecture https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011&dc&qid=1672780796&rnid=154607011&ref=lp_154607011_nr_n_0\n",
-      "Art https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154608011&dc&qid=1672780796&rnid=154607011&ref=lp_154607011_nr_n_1\n",
-      "Dance https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154692011&dc&qid=1672780796&rnid=154607011&ref=lp_154607011_nr_n_2\n",
-      "Fashion https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154656011&dc&qid=1672780796&rnid=154607011&ref=lp_154607011_nr_n_3\n",
-      "Graphic Design https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154657011&dc&qid=1672780796&rnid=154607011&ref=lp_154607011_nr_n_4\n",
-      "Individual Artists https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154655011&dc&qid=1672780796&rnid=154607011&ref=lp_154607011_nr_n_5\n",
-      "Music https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A156302011&dc&qid=1672780796&rnid=154607011&ref=lp_154607011_nr_n_6\n",
-      "Performing Arts https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154691011&dc&qid=1672780796&rnid=154607011&ref=lp_154607011_nr_n_7\n",
-      "Photography https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154715011&dc&qid=1672780796&rnid=154607011&ref=lp_154607011_nr_n_8\n",
-      "Theater https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154704011&dc&qid=1672780796&rnid=154607011&ref=lp_154607011_nr_n_9\n"
+      "Architecture https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011&dc&qid=1673385506&rnid=154607011&ref=lp_154607011_nr_n_0\n",
+      "Art https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154608011&dc&qid=1673385506&rnid=154607011&ref=lp_154607011_nr_n_1\n",
+      "Dance https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154692011&dc&qid=1673385506&rnid=154607011&ref=lp_154607011_nr_n_2\n",
+      "Fashion https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154656011&dc&qid=1673385506&rnid=154607011&ref=lp_154607011_nr_n_3\n",
+      "Graphic Design https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154657011&dc&qid=1673385506&rnid=154607011&ref=lp_154607011_nr_n_4\n",
+      "Individual Artists https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154655011&dc&qid=1673385506&rnid=154607011&ref=lp_154607011_nr_n_5\n",
+      "Music https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A156302011&dc&qid=1673385506&rnid=154607011&ref=lp_154607011_nr_n_6\n",
+      "Performing Arts https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154691011&dc&qid=1673385506&rnid=154607011&ref=lp_154607011_nr_n_7\n",
+      "Photography https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154715011&dc&qid=1673385506&rnid=154607011&ref=lp_154607011_nr_n_8\n",
+      "Theater https://www.amazon.com/s?bbn=154607011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A154704011&dc&qid=1673385506&rnid=154607011&ref=lp_154607011_nr_n_9\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "liste_unique = ['url', False , \"cat1\" , \"cat2\"]"
+    "liste_unique = ['https://www.amazon.com/b?node=154607011&ref_=sub_ebooks_cat_1', False , \"Arts & Photography\"]"
    ]
   },
   {
@@ -207,7 +207,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 7,
+   "id": "de9b29d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste_categories=[\n",
+    "    ['https://www.amazon.com/b?node=154607011&ref_=sub_ebooks_cat_1', False , \"Arts & Photography\"],\n",
+    "    [ 'https://www.amazon.com/b?node=154754011&ref_=sub_ebooks_cat_2',False,'Biographies & Memoirs' ]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "afc177cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['https://www.amazon.com/b?node=154607011&ref_=sub_ebooks_cat_1',\n",
+       "  False,\n",
+       "  'Arts & Photography'],\n",
+       " ['https://www.amazon.com/b?node=154754011&ref_=sub_ebooks_cat_2',\n",
+       "  False,\n",
+       "  'Biographies & Memoirs'],\n",
+       " ['https://www.amazon.com/b?node=154754011&ref_=sub_ebooks_cat_2',\n",
+       "  False,\n",
+       "  'Biographies & Memoirs']]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste_categories+[liste_categories[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b579c159",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_837/677267808.py:4: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# liste_unique = ['url', False , \"cat1\"]\n",
+    "def descendrecategories(listing_des_pages):\n",
+    "    DRIVER_PATH_chromedriver = str(Path('../chromedriver').resolve())\n",
+    "    browser = webdriver.Chrome(executable_path= DRIVER_PATH_chromedriver)\n",
+    "    nouvelle_liste=[] # on initie une liste vide\n",
+    "    for a in listing_des_pages: # on derule le liste de liste et on égrenne une liste\n",
+    "        if a[1]== False:\n",
+    "            nouvelle_liste = nouvelle_liste+ [a[1]]            \n",
+    "            browser.get(a[0])\n",
+    "            browser.get(a[0])\n",
+    "            html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "            soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser lxml\n",
+    "            categories = soup.find_all('li'  , class_ = 'a-spacing-micro s-navigation-indent-2') \n",
+    "            listing_categories={} #on créé un dictionnaire vide\n",
+    "            if categories==0:\n",
+    "                print(\"pas de categories sur cette page\")\n",
+    "                #None\n",
+    "            else:\n",
+    "                for categorie in categories : # on va balayer toutes les catégories trouvées sur cette page\n",
+    "                    categor = categorie.span.text.strip() # via la fonction strip on récupère le nom de la catégories\n",
+    "                    lien = 'https://www.amazon.com'+ categorie.a.get('href') # on recréé le lien\n",
+    "                    listing_categories[categor] = lien # le dictionnaire est incrémenté\n",
+    "                    nouvelle_liste = nouvelle_liste + [lien,False,a[2],categor]\n",
+    "                    print(\"on est ici\")#on va \n",
+    "        else:\n",
+    "            print(\"b\")\n",
+    "            nouvelle_liste = nouvelle_liste+[a]\n",
+    "    return nouvelle_liste\n",
+    "\n",
+    "descendrecategories(liste_categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "c14404e7",
    "metadata": {},
    "outputs": [],
